fix link overflow, improve read more
fixed link overflow in task content and made read more actually a read more !

--- a/website/static/main.css
+++ b/website/static/main.css
@@ -21,7 +21,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .breakAll {
-  word-wrap: break-word;
+  word-break: break-word;
 }
 .badge{
   float: right;
